# marketplace-matching-agent

./: .cursorrules  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval-pr.yml
data/: README.md
data/synthetic/: bertrand_mullainathan_names.json
docs/: architecture.md  citations_contract.md  fairness_methodology.md
docs/adr/: 0001-langgraph-supervisor.md  0002-hybrid-retrieval-rrf.md  0003-mcp-skill-registry.md
evals/: cache.py  judge_goodmatch.py  metrics.py  run_eval.py
evals/trajectories/: recruiter_qs.jsonl  seeker_qs.jsonl
infra/postgres/: init.sql
infra/qdrant/: collections.yaml
mcp_servers/: bootstrap.py
mcp_servers/audit_log/: server.py
mcp_servers/evaluator/: server.py
mcp_servers/fairness_audit/: server.py
mcp_servers/job_search/: server.py
mcp_servers/resume_parser/: server.py
scripts/: build_synthetic_resumes.py  eval_delta.py  ingest_jobs.py  ingest_resumes.py
src/marketplace_matching_agent/: __init__.py  __main__.py  cli.py  config.py  graph.py  mcp_client.py  state.py  types.py
src/marketplace_matching_agent/agents/: evaluation.py  fairness.py  search.py
src/marketplace_matching_agent/api/: server.py
src/marketplace_matching_agent/audit/: log.py  schema.sql
src/marketplace_matching_agent/evaluation/: scoring.py
src/marketplace_matching_agent/extraction/: citations.py  resume.py
src/marketplace_matching_agent/fairness/: audit.py  detconstsort.py  synthetic_protected.py
src/marketplace_matching_agent/retrieval/: bm25.py  dense.py  hybrid.py  rerank.py  rrf.py
src/marketplace_matching_agent/ui/: streamlit_app.py
tests/: conftest.py  test_api.py  test_audit.py  test_bm25.py  test_citations.py  test_cli.py  test_coverage_extra.py  test_dense.py  test_detconstsort.py  test_fairness.py  test_fairness_audit.py  test_graph.py  test_hybrid.py  test_mcp_client.py  test_mcp_servers.py  test_mcp_units.py  test_rerank.py  test_rrf.py  test_state.py  test_unit_extra.py
tests/fixtures/: anthropic_messages_three_citations.json  anthropic_messages_two_citations.json  candidates_docs.json  jobs_docs.json  retrieval_gold.json
tests/helpers/: retrieval_mocks.py
