[project]
name = "marketplace-matching-agent"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "langgraph==1.0.3",
  "langgraph-supervisor==0.0.27",
  "langchain==1.0.5",
  "langchain-anthropic==1.0.3",
  "langchain-mcp-adapters==0.2.2",
  "mcp==1.9.2",
  "anthropic==0.69.0",
  "voyageai==0.3.2",
  "cohere==5.13.4",
  "qdrant-client==1.12.1",
  "tantivy==0.22.0",
  "fairlearn==0.12.0",
  "pydantic==2.9.2",
  "fastapi==0.115.6",
  "httpx==0.28.1",
  "psycopg[binary]==3.2.3",
  "sqlalchemy==2.0.36",
  "structlog==24.4.0",
  "typer==0.15.1",
  "polars==1.17.1",
]

[project.optional-dependencies]
dev = [
  "ruff==0.8.4",
  "mypy==1.13.0",
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "pytest-cov==6.0.0",
  "hypothesis==6.122.3",
  "respx==0.21.1",
]

[project.scripts]
marketplace-matching-agent = "marketplace_matching_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketplace_matching_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C90", "UP", "S", "ASYNC", "RET", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src --cov-fail-under=85"
testpaths = ["tests"]
